@@ -60,11 +60,12 @@ kotlin {
             implementation(libs.sqlDelight.coroutines)
             implementation(libs.napier)
             implementation("io.coil-kt.coil3:coil-compose:3.2.0")
-            implementation("io.coil-kt.coil3:coil-network-ktor3:3.2.0")
             implementation(compose.materialIconsExtended)
             implementation("io.ktor:ktor-client-auth:3.1.0")
             implementation("net.dankito.readability4j:readability4j:1.0.8")
             implementation("com.russhwolf:multiplatform-settings:1.3.0")
+            implementation("io.coil-kt.coil3:coil-network-okhttp:3.0.0-alpha07")
+
         }
         commonTest.dependencies {
             implementation(libs.kotlin.test)
@@ -129,8 +130,13 @@ compose.desktop {
 
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-            packageName = "io.github.peningtonj.recordcollection"
+            packageName = "Record Collection"
             packageVersion = "1.0.0"
+            modules("java.sql")
+            jvmArgs("--add-modules", "java.sql")
+            macOS {
+                bundleID = "io.github.peningtonj.recordcollection"
+            }
         }
     }
 }
